# freedact

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  freedact.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
evaluation/: build_readme_check.py  fuzz.py  metrics.py  perf.py
evaluation/fixtures/: addresses_multiline.spans.json  addresses_multiline.txt  banks_ids.spans.json  banks_ids.txt  dates_mixed.spans.json  dates_mixed.txt  emails_phones.spans.json  emails_phones.txt  example_hereinafter.spans.json  example_hereinafter.txt  loader.py
examples/: safe-overrides.yml
freedact/: __init__.py  __main__.py  cli.py  io_utils.py  redaction.py
src/redactor/: __init__.py  cli.py
src/redactor/config/: __init__.py  defaults.yml  schema.py
src/redactor/detect/: __init__.py  account_ids.py  address_libpostal.py  aliases.py  bank_org.py  base.py  date_dob.py  date_generic.py  email.py  names_person.py  ner_spacy.py  patterns.py  phone.py
src/redactor/evaluation/: __init__.py  fuzz.py  metrics.py
src/redactor/filters/: __init__.py  guards.py
src/redactor/io/: __init__.py
src/redactor/io/readers/: __init__.py  docx_reader.py  html_reader.py  pdf_reader.py  txt_reader.py
src/redactor/io/writers/: __init__.py  docx_writer.py  html_writer.py  pdf_writer.py  txt_writer.py
src/redactor/link/: __init__.py  address_merge.py  alias_resolver.py  coref.py  entity_clusterer.py  span_merger.py
src/redactor/preprocess/: __init__.py  layout_reconstructor.py  normalizer.py  segmenter.py
src/redactor/pseudo/: __init__.py  address_rules.py  case_preserver.py  generator.py  name_rules.py  number_rules.py  seed.py
src/redactor/pseudo/generators/: __init__.py  address.py  address_data.py  email.py  numbers.py  phone.py
src/redactor/replace/: __init__.py  applier.py  plan_builder.py
src/redactor/utils/: __init__.py  constants.py  datefmt.py  errors.py  logging.py  textspan.py
src/redactor/verify/: __init__.py  heuristics.py  report.py  scanner.py
src/yaml/: __init__.py
tests/: test_address_block_merge.py  test_address_block_merger.py  test_address_block_replace.py  test_alias_resolver.py  test_audit_report.py  test_build_sanity.py  test_case_preserver.py  test_cli_errors.py  test_cli_full_pipeline.py  test_cli_help.py  test_cli_run.py  test_cli_strict_gate.py  test_config_defaults.py  test_config_env.py  test_config_validation.py  test_core_models.py  test_coref_integration.py  test_deep_merge.py  test_detect_account_ids.py  test_detect_address_line.py  test_detect_aliases.py  test_detect_bank_org.py  test_detect_dates.py  test_detect_dates_dob.py  test_detect_email.py  test_detect_ner.py  test_detect_phone.py  test_detector_protocol.py  test_fixtures_integrity.py  test_fixtures_pipeline_redact.py  test_forbidden_literals.py  test_fuzz_normalizer.py  test_fuzz_pipeline.py  test_heading_and_gpe_guards.py  test_imports.py  test_io_registry.py  test_io_txt_roundtrip.py  test_metrics_harness.py  test_name_heuristics.py  test_no_generic_accountid_spillover.py  (+20 more)
tools/: forbidden_literals.yml
