[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "redactor"
version = "0.1.0"
description = "Privacy-first Legal Document Redactor"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Project Contributors"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "PyYAML>=6",
    "typer>=0.12",
    "phonenumbers>=8.13.0",
    "python-stdnum>=1.19",
    "usaddress>=0.5.10",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
redactor = "redactor.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
    "pytest>=7.0",
    "types-PyYAML",
]
ner = [
    "spacy>=3.7,<3.8",
    "spacy-transformers>=1.3,<1.4",
]
coref = [
    "fastcoref>=2.1.6",
    "torch>=2.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = ["E203"]  # W503 deprecated

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["phonenumbers", "phonenumbers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["stdnum", "stdnum.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["usaddress", "usaddress.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["typer", "typer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["typer.testing"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["spacy", "spacy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastcoref", "fastcoref.*"]
ignore_missing_imports = true
